--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ nav {
     color: #000000;
     width: 100px;
     height: 50px;
-    background-color: #ffee00;
+    background-color: #57ce57;
     font-size: 30px;
     text-align: center;
     border-radius: 50px;
@@ -108,7 +108,7 @@ nav {
   
   #page1 {
     height: 750px;
-    background-color: #ffee00;
+    background-color: #57ce57;
     padding: 12% 0;
     padding-bottom: 5%;
   }
