--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ nav {
     color: #000000;
     width: 100px;
     height: 50px;
-    background-color: #57ce57;
+    background-color: #ffffff;
     font-size: 30px;
     text-align: center;
     border-radius: 50px;
