--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ nav {
   
   #page1 {
     height: 750px;
-    background-color: #57ce57;
+    background-color: #ffffff;
     padding: 12% 0;
     padding-bottom: 5%;
   }
