--- a/css/style.css
+++ b/css/style.css
@@ -592,7 +592,7 @@ nav {
     font-family: "Montserrat";
     font-size: 15px;
     color: #ffffff;
-    background-color: #7e7a7a;
+    background-color: #57ce57 ;
     border: none;
     margin-right: 0;
     margin-left: 250px;
